iky-task - fix z-index

--- a/projects/iki-task/src/styles/index.scss
+++ b/projects/iki-task/src/styles/index.scss
@@ -158,6 +158,7 @@ body {
             bottom: -9rem;
             left: 50%;
             transform: translateX(-50%);
+            z-index: 1;
         }
 
         &-task-first {
